fix:  keep Ellipsis innerHTML keep wrap

--- a/packages/arcodesign/components/ellipsis/style/index.less
+++ b/packages/arcodesign/components/ellipsis/style/index.less
@@ -21,6 +21,10 @@
         .use-var(padding-left, ellipsis-float-ellipsis-node-padding-left);
     }
 
+    &-js-content-text-pre {
+        white-space: pre-line;
+    }
+    
     &-js-content-ellipsis {
         display: none;
     }
